--- a/home.html
+++ b/home.html
@@ -565,7 +565,7 @@
                                                       SendGrid for Feedback
                                                   </li>
                                                 </ul>
-                                                <img src="img/portfolio/shrimp.png" alt="Survey Shrimp">
+                                                <img src="img/portfolio/shrimp.jpg" alt="Survey Shrimp">
                                             </div>
                                         </div>
                                     </div>
@@ -681,7 +681,7 @@
                                                         PassportJS
                                                     </li>
                                                 </ul>
-                                                <img src="img/portfolio/campground.png" alt="Campground Blog">
+                                                <img src="img/portfolio/campground.jpg" alt="Campground Blog">
                                             </div>
                                         </div>
                                     </div>
@@ -750,7 +750,7 @@
                                                       PassportJS
                                                   </li>
                                               </ul>
-                                              <img src="img/portfolio/campground.png" alt="Campground Blog">
+                                              <img src="img/portfolio/campground.jpg" alt="Campground Blog">
                                           </div>
                                       </div>
                                   </div>
@@ -812,7 +812,7 @@
                                                       SendGrid for Feedback
                                                   </li>
                                                 </ul>
-                                                <img src="img/portfolio/shrimp.png" alt="Survey Shrimp">
+                                                <img src="img/portfolio/shrimp.jpg" alt="Survey Shrimp">
                                             </div>
                                         </div>
                                     </div>
