--- a/home.html
+++ b/home.html
@@ -583,7 +583,7 @@
                                                         <h4>Weather Forecast</h4>
                                                         <p>
                                                             <a class="resume_card_links" href="http://weatherapp13.herokuapp.com/" target="_blank">
-                                                                <span class="resume_card_tags">
+                                                                <span class="resume_card_tags">Live
                                                                     <i class="zmdi zmdi-desktop-mac zmdi-hc-2x"></i>
                                                                 </span>
                                                             </a>
@@ -886,7 +886,7 @@
                                                         <h4>Weather Forecast</h4>
                                                         <p>
                                                             <a class="resume_card_links" href="http://weatherapp13.herokuapp.com/" target="_blank">
-                                                                <span class="resume_card_tags">
+                                                                <span class="resume_card_tags">Live
                                                                     <i class="zmdi zmdi-desktop-mac zmdi-hc-2x"></i>
                                                                 </span>
                                                             </a>
